# kaji

./: .gitmodules  CMakeLists.txt  makefile  readme.md
docs/: Doxyfile
docs/html/: all_8h.html  all_8h_source.html  annotated.html  annotated_dup.js  binding_8h.html  binding_8h.js  binding_8h_source.html  classes.html  core_8h.html  core_8h.js  core_8h_source.html  dir_18b3b9d7d3260b03ed5902be7c86a4ab.html  dir_18b3b9d7d3260b03ed5902be7c86a4ab.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_9155aa3befb1c9fe996769e1dd675e70.html  dir_9155aa3befb1c9fe996769e1dd675e70.js  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  file_8h.html  file_8h_source.html  files.html  fragment_8h.html  fragment_8h.js  fragment_8h_source.html  gedanken_8c.html  gedanken_8h.html  gedanken_8h_source.html  globals.html  globals_func.html  globals_type.html  index.html  kaji_8c.html  kaji_8c.js  log_8h_source.html  memory_8h.html  memory_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  (+6 more)
docs/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  files_3.js  files_4.js  files_5.js  functions_0.js  searchdata.js  typedefs_0.js
etc/: analyze-include-dirs.list  analyze-source-files.list
examples/: counter.c  peom.h  use_gedanken.c
inc/kaji/: all.h  binding.h  core.h  file.h  fragment.h  gedanken.h  kaji.h  log.h  memory.h  print.h  spirits.h
inc/kaji/win/: mman.h
src/kaji/: gedanken.c  kaji.c  spirits.c
src/kaji/nix/: mman.c
src/kaji/win/: mman.c  mmap.c
